--- a/index.html
+++ b/index.html
@@ -52,17 +52,25 @@
 <hr>
   <!-- Section 5 -->
    <section>
-     <h3>Gallery</h3>
-<h4>One of many watefalls in the Grand Canyon</h4>
-     <img src="images/Get-to-Know-the-Grand-Canyon-Secrets-and-the-Hidden-Waterfall.jpg" alt="One of many watefalls in the Grand Canyon">
-<h4>Visitors look out from a viewpoint</h4>
+    <h3>Gallery</h3>
+<figure>
+    <img src="images/Get-to-Know-the-Grand-Canyon-Secrets-and-the-Hidden-Waterfall.jpg" alt="One of many watefalls in the Grand Canyon">
+<figcaption>One of many watefalls in the Grand Canyon</figcaption>
+</figure>
+    
+<figure>
 <img src="images/mather-point-2021.jpg" alt="Visitors look out from a viewpoint">
-<h4>View of the Colorado River from the Upper Rim</h4>
+<figcaption>Visitors look out from a viewpoint</figcaption>
+</figure>
+
+<figure>
 <img src="images/shutterstock_97706066_1.jpg" alt="View of the Colorado River from the Upper Rim">
+<figcaption>View of the Colorado River from the Upper Rim</figcaption>
+</figure>
 </section>
 <!-- Section 6 -->
 <section>
-    <h5>Grand Canyon 4K</h5>
+    <h4>Grand Canyon 4K</h4>
      <iframe width="560" height="315" src="https://www.youtube.com/embed/huqJUghX26Y?si=FxKeleaB9EymGKFf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </section>
 <!-- Section 7 -->
