--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
     <h3>Gallery</h3>
 <figure>
     <img src="images/Get-to-Know-the-Grand-Canyon-Secrets-and-the-Hidden-Waterfall.jpg" alt="One of many watefalls in the Grand Canyon">
-<figcaption>One of many watefalls in the Grand Canyon</figcaption>
+<figcaption><b>One of many watefalls in the Grand Canyon</b></figcaption>
 </figure>
     
 <figure>
 <img src="images/mather-point-2021.jpg" alt="Visitors look out from a viewpoint">
-<figcaption>Visitors look out from a viewpoint</figcaption>
+<figcaption> <b>Visitors look out from a viewpoint</b></figcaption>
 </figure>
 
 <figure>
 <img src="images/shutterstock_97706066_1.jpg" alt="View of the Colorado River from the Upper Rim">
-<figcaption>View of the Colorado River from the Upper Rim</figcaption>
+<figcaption> <b>View of the Colorado River from the Upper Rim</b></figcaption>
 </figure>
 </section>
 <!-- Section 6 -->
