mark and em tag added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Header Section -->
      <header> 
 <h1>The Grand Canyon</h1>
-<p>The Grand Canyon is a steep-sided canyon carved by the Colorado River in Arizona, United States.</p>
+<p>The Grand Canyon is a steep-sided canyon carved by the <em>Colorado River</em> in Arizona, United States.</p>
      </header>
 
      <!-- Main Section -->
@@ -26,7 +26,7 @@
      <!-- Section 2 -->
       <section> 
           <h2>Notable Nature</h2>
-          <p>The Park contains several major ecosystems. Its great biological diversity can be attributed to the presence of five of the seven life zones and three of the four desert types in North America.
+          <p>The Park contains several major ecosystems. <mark>Its great biological diversity</mark> can be attributed to the presence of five of the seven life zones and three of the four desert types in North America.
                The five life zones represented are the Lower Sonoran, Upper Sonoran, Transition, Canadian, and Hudsonian. This is equivalent to traveling from Mexico to Canada.</p>
       </section>
 
@@ -60,12 +60,12 @@
     
 <figure>
 <img src="images/mather-point-2021.jpg" alt="Visitors look out from a viewpoint">
-<figcaption> <b>Visitors look out from a viewpoint</b></figcaption>
+<figcaption><b>Visitors look out from a viewpoint</b></figcaption>
 </figure>
 
 <figure>
 <img src="images/shutterstock_97706066_1.jpg" alt="View of the Colorado River from the Upper Rim">
-<figcaption> <b>View of the Colorado River from the Upper Rim</b></figcaption>
+<figcaption><b>View of the Colorado River from the Upper Rim</b></figcaption>
 </figure>
 </section>
 <!-- Section 6 -->
