--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <!-- Section 6 -->
 <section>
     <h4>Grand Canyon 4K</h4>
-     <iframe width="560" height="315" src="https://www.youtube.com/embed/huqJUghX26Y?si=FxKeleaB9EymGKFf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+     <iframe width="560" height="315" src="https://www.youtube.com/embed/huqJUghX26Y?si=FxKeleaB9EymGKFf" title="YouTube video player"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </section>
 <!-- Section 7 -->
 <section>
